--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
       <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task"class="task-input" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -21,19 +21,19 @@
       <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-input">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <label class="task-input">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
+          <button class="edit-button">Save</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -42,10 +42,10 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-input">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
