--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
       <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -26,7 +26,7 @@
             <input type="text" class="task-input">
             <button class="edit-button">Edit</button>
             <button class="delete-button">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Delete button">
             </button>
           </li>
           <li class="edit-mode">
@@ -35,7 +35,7 @@
             <input type="text" value="Go Shopping" class="task-input">
             <button class="edit-button">Save</button>
             <button class="delete-button">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Delete button">
             </button>
           </li>
         </ul>
@@ -49,7 +49,7 @@
             <input type="text" class="task-input">
             <button class="edit-button">Edit</button>
             <button class="delete-button">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Delete button">
             </button>
           </li>
         </ul>
