--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
-      <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__image" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="add-task">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task-input" type="text">
-          <button>Add</button>
+      <section class="section">
+        <label class="section__label" for="new-task">Add Item</label>
+        <div class="section__wrapper">
+          <input class="section__input" type="text" id="new-task">
+          <button class="button section__button">Add</button>
         </div>
       </section>
-      <section>
-        <h3>Todo</h3>
-        <ul id="incomplete-tasks">
-          <li>
-            <input type="checkbox">
-            <label class="task-input">Pay Bills</label>
-            <input type="text" class="task-input">
-            <button class="edit-button">Edit</button>
-            <button class="delete-button">
-              <img src="./remove.svg" alt="Delete button">
+      <section class="section">
+        <h3 class="section__title">Todo</h3>
+        <ul class="list section__list section__list_incomplete">
+          <li class="list__item">
+            <input class="list__checkbox" type="checkbox">
+            <label class="list__label section__input">Pay Bills</label>
+            <input class="list__input section__input" type="text">
+            <button class="list__button list__button_edit">Edit</button>
+            <button class="button list__button list__button_delete">
+              <img class="button_icon" src="./remove.svg" alt="Delete button">
             </button>
           </li>
-          <li class="edit-mode">
-            <input type="checkbox">
-            <label class="task-input">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task-input">
-            <button class="edit-button">Save</button>
-            <button class="delete-button">
-              <img src="./remove.svg" alt="Delete button">
+          <li class="list__item list__item_edit">
+            <input class="list__checkbox" type="checkbox">
+            <label class="list__label section__input">Go Shopping</label>
+            <input class="list__input section__input" type="text" value="Go Shopping">
+            <button class="list__button list__button_edit">Save</button>
+            <button class="button list__button list__button_delete">
+              <img class="button_icon" src="./remove.svg" alt="Delete button">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task-input">See the Doctor</label>
-            <input type="text" class="task-input">
-            <button class="edit-button">Edit</button>
-            <button class="delete-button">
-              <img src="./remove.svg" alt="Delete button">
+      <section class="section">
+        <h3 class="section__title">Completed</h3>
+        <ul class="list section__list section__list_completed">
+          <li class="list__item">
+            <input class="list__checkbox" type="checkbox" checked>
+            <label class="list__label section__input">See the Doctor</label>
+            <input class="list__input section__input" type="text">
+            <button class="list__button list__button_edit">Edit</button>
+            <button class="button list__button list__button_delete">
+              <img class="button_icon" src="./remove.svg" alt="Delete button">
             </button>
           </li>
         </ul>
