refactor: add class according to BEM to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section class="section">
         <label class="section__label" for="new-task">Add Item</label>
         <div class="section__wrapper">
-          <input class="section__input" type="text" id="new-task">
+          <input class="section__input section__input_add" type="text" id="new-task">
           <button class="button section__button">Add</button>
         </div>
       </section>
